--- a/views/partials/enHeader.ejs
+++ b/views/partials/enHeader.ejs
@@ -46,7 +46,14 @@
             >About</a
           >
         </li>
-
+        <li>
+          <a
+            name="about-section"
+            class="menu-link"
+            href="/soonEn"
+            >Projects</a
+          >
+        </li>
         <li>
           <a
             name="contact-section"
@@ -61,13 +68,13 @@
       <a
         id="logo"
         href="https://rt-cranes.onrender.com"
-        title="SRC | S.R Cranes"
+        title="RTC | R.T Cranes"
         data-height="80"
         data-padding="0"
       >
         <img
           class="logo-main scale-with-grid"
-          src="/assets/sr-logo.png"
+          src="/assets/rt-logo.png"
           alt="logo"
           data-no-retina=""
           
