--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,32 +10,21 @@
       <div class="footer-item-content">
         <ul id="menu" class="menu">
           <p id="city">
-            <i
-              class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-            אשדוד , רוגוזין 9
-            
+            <i class="fa fa-home fa-fw"></i>&nbsp;&nbsp; אשדוד , רוגוזין 3 משרד 37
           </p>
           <p id="phone">
-            <i
-              class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-            050-9088120
-            
+            <i class="fa fa-phone fa-fw"></i>&nbsp;&nbsp; יוסי: 050-4000-811 
           </p>
-          <p id="email">
-           
-            <i
-              class="fa fa-envelope-o fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-            shai.manofin@gmail.com
+          <p id="phone">
+            <i class="fa fa-phone fa-fw"></i>&nbsp;&nbsp; משרד: 077-404-7-406 
+          </p>
+          <p>
+            <i class="fa fa-envelope fa-fw"></i>&nbsp;&nbsp;
+            RTCRANES.1@gmail.com
           </p>
           <p id="time">
-            <i
-              class="fa fa-clock-o fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-            א'-ה', 8:00 - 19:00
-            
+            <i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp; א'-ה', 8:00 -
+            19:00
           </p>
         </ul>
       </div>
@@ -50,28 +39,28 @@
       <div class="footer-item-content" id="services-footer">
         <!-- <div class="menu-container"> -->
         <ul id="menu" class="menu">
-          <li><a href="/#">השכרת מנופים </a></li>
-          <li><a href="#">מכירת מנופים</a></li>
-          <li><a href="#">כח אדם</a></li>
+          <li><a href="/cranesRental">השכרת מנופים </a></li>
+          <li><a href="/soon">מכירת מנופים</a></li>
+          <li><a href="/soon">כח אדם</a></li>
         </ul>
       </div>
     </div>
     <div class="footer-item" >
       <div class="footer-item-title">
-        <a href="#"> קצת עלינו</a>
+        <a > קצת עלינו</a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
-          <li><a href="/contactUs"> אודות </a></li>
-          <li><a href="#">פרויקטים נבחרים </a></li>
-          <li><a href="#"> לקוחותינו </a></li>
+          <li><a href="/homePage#about-section"> אודות </a></li>
+          <li><a href="/soon">פרויקטים נבחרים </a></li>
+          <li><a href="/homePage#clients-section"> לקוחותינו </a></li>
 
         </ul>
       </div>
     </div>
     <div class="footer-item" id="footer-logo">
-      <a  href="#" title="SRC | ש.ר מנופים ">
-        <img class="logo-main scale" src="/assets/sr-logo.png" alt="logo"
+      <a  href="#" title="RTC | מנופי אר.טי">
+        <img class="logo-main scale" src="/assets/rt-logo.png" alt="logo"
       /></a>
     </div>
   </div>
