--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,13 +13,13 @@
 
       <ul>
         <li>
-          <a name="home-section" class="menu-link" href="/homePage#home-section"
+          <a  class="menu-link " href="/homePage#home-section"
             >דף הבית</a
           >
         </li>
         <li>
           <a
-            name="catalog-section"
+            
             class="menu-link"
             href="/homePage#catalog-section"
           >
@@ -28,7 +28,7 @@
         </li>
         <li>
           <a
-            name="services-section"
+           
             class="menu-link"
             href="/homePage#services-section"
             >שירותים</a
@@ -36,16 +36,23 @@
         </li>
         <li>
           <a
-            name="about-section"
+            
             class="menu-link"
             href="/homePage#about-section"
             >אודות</a
           >
         </li>
-
         <li>
           <a
-            name="contact-section"
+            
+            class="menu-link"
+            href="/soon"
+            >פרויקטים</a
+          >
+        </li>
+        <li>
+          <a
+            
             class="menu-link"
             href="/homePage#contact-section"
             >צור קשר</a
@@ -57,13 +64,13 @@
       <a
         id="logo"
         href="https://rt-cranes.onrender.com"
-        title="SRC | ש.ר מנופים "
+        title="RTC | מנופי אר.טי"
         data-height="80"
         data-padding="0"
       >
         <img
           class="logo-main scale-with-grid"
-          src="/assets/sr-logo.png"
+          src="/assets/rt-logo.png"
           alt="logo"
           data-no-retina=""
           style=""
@@ -104,7 +111,7 @@
         <li>
           <a
             name="catalog-section"
-            class="menu-link"
+            class="menu-link "
             onclick="scrollToSectionMobile('catalog-section')"
             >קטלוג מנופים</a
           >
