--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -27,7 +27,7 @@
               class="icon-image"
             />
           </div>
-          <h3>ש.ר מנופים</h3>
+          <h3>מנופי אר.טי בע"מ</h3>
           <h2>
             עבודות מנוף מתקדמות והשכרת מנופים ומפעילים בהתאמה מלאה לפרויקט שלכם
           </h2>
@@ -107,22 +107,22 @@
           </div>
 
           <div class="catalog-item-title">
-            <a href="/itemGRT8100.ejs">GRT8100</a>
+            <a href="/itemGRT8100">RT8100</a>
           </div>
         </div>
 
         <div class="catalog-item">
           <div class="catalog-item-content">
-            <img src="/assets/RT765E.png" alt="GRT880" />
+            <img src="/assets/RT770E-1.png" alt="GRT770-E" />
           </div>
-          <div class="catalog-item-title">RT765E</div>
+          <div class="catalog-item-title"><a href="/itemGRT770E">RT770E</a></div>
         </div>
 
         <div class="catalog-item">
           <div class="catalog-item-content">
-            <img src="/assets/RT530E.png" alt="GRT880" />
+            <img src="/assets/RT530E.png" alt="GRT530E" />
           </div>
-          <div class="catalog-item-title">RT530E</div>
+          <div class="catalog-item-title"><a href="/itemGRT530E-2">RT530E-2</a></div>
         </div>
         <!-- Line 2 -->
 
@@ -185,7 +185,7 @@
           <div class="bar"></div>
           <div class="about-text">
             <p>
-              ש.ר מנופים היא חברה מובילה ומוכרת בשירותי השכרת מנופים ובתעשיית
+              מנופי אר.טי בע"מ היא חברה מובילה ומוכרת בשירותי השכרת מנופים ובתעשיית
               ההרמה הכבדה. <br />החברה בעלת מוניטין של למעלה מ-20 שנות ניסיון
               בתעשייה, והייתה חלק בלתי נפרד במספר רב של פרויקטים בקנה מידה
               מהגדולים בארץ.<br />
@@ -362,14 +362,17 @@
 
             <ul id="menu" class="menu">
               <p id="city">
-                <i class="fa fa-home fa-fw"></i>&nbsp;&nbsp; אשדוד , רוגוזין 9
+                <i class="fa fa-home fa-fw"></i>&nbsp;&nbsp; אשדוד , רוגוזין 3 משרד 37
               </p>
               <p id="phone">
-                <i class="fa fa-phone fa-fw"></i>&nbsp;&nbsp; 050-9088120
+                <i class="fa fa-phone fa-fw"></i>&nbsp;&nbsp; יוסי: 050-4000-811 
+              </p>
+              <p id="phone">
+                <i class="fa fa-phone fa-fw"></i>&nbsp;&nbsp; משרד: 077-404-7-406 
               </p>
               <p>
                 <i class="fa fa-envelope fa-fw"></i>&nbsp;&nbsp;
-                shai.manofin@gmail.com
+                RTCRANES.1@gmail.com
               </p>
               <p id="time">
                 <i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp; א'-ה', 8:00 -
@@ -469,7 +472,11 @@
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
       </span>
     </a>
-
+    <a href="https://www.facebook.com/rt.cranes1" class="bottom-menu-button" id="facebook-button">
+      <span class="touchy-email-text-label-offset">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+      </span>
+    </a>
     </div>
 
     <script src="https://cdn.enable.co.il/licenses/enable-L22260wfos04j6vz-0923-50759/init.js"></script>
