--- a/views/pages/itemGRT530E-2En.ejs
+++ b/views/pages/itemGRT530E-2En.ejs
@@ -13,34 +13,39 @@
       <p style="text-align: center">
         <a class="link" href="/homePageEn">Home</a>&gt;
         <a class="link"  onclick="BackToCatalog()">Cranes Catalog </a>&gt;
-        <a class="link" style="cursor: default;"> GRT8100-1  </a>
+        <a class="link" style="cursor: default;"> RT530E-2  </a>
       </p>
     </section>
 
     <section class="content">
-            <h2>GROVE model GRT8100-1</h2>
+            <h2>GROVE model RT530E-2</h2>
 
       <div class="container">
         <div class="gallery">
-          <div class="mySlides ">
-            <div class="img-container">
-              <img src="/assets/GRT8100.png" alt="Image 1" />
+            <div class="mySlides ">
+              <div class="img-container">
+                <img src="/assets/RT530E-2 transparent.png" alt="RT530E-2 transparent" />
+              </div>
             </div>
-          </div>
-
-          <div class="mySlides ">
-            <div class="img-container">
-              <img src="/assets/RT530E.png" alt="Image 2" />
+  
+            <div class="mySlides ">
+              <div class="img-container">
+                <img src="/assets/RT530E-2-boom-extended.jpg" alt="RT530E-2-boom-extended" />
+              </div>
             </div>
-          </div>
-          <div class="mySlides ">
-            <div class="img-container">
-              <img src="/assets/RT765E.png" alt="Image 3" />
+            <div class="mySlides ">
+              <div class="img-container">
+                <img src="/assets/RT530E-2-front.jpg" alt="RT530E-2-front" />
+              </div>
             </div>
+            <div class="mySlides ">
+              <div class="img-container">
+                <img src="/assets/RT530E-2-profile.jpg" alt="RT530E-2-profile" />
+              </div>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
           </div>
-          <a class="prev" onclick="plusSlides(-1)">❮</a>
-          <a class="next" onclick="plusSlides(1)">❯</a>
-        </div>
 
         
 
@@ -48,21 +53,21 @@
           <form class="details" id="details-form">
             <div class="input-box">
               <label for="max-capacity">Max capacity </label>
-              <input placeholder="100 t"readonly/>
+              <input placeholder="30 t"readonly/>
             </div>
             <div class="input-box">
               <label for="weight" >Total gross weight 
               </label>
-              <input type="number"placeholder="57,220 kg"readonly/>
+              <input type="number"placeholder="27,555 kg"readonly/>
             </div>
             <div class="input-box">
               <label for="boom-length" >Main boom length </label>
-              <input type="text"placeholder="12 m - 47 m" readonly />
+              <input type="text"placeholder="8.8 m - 29 m" readonly />
             </div>
             <div class="input-box">
               <label for="tip-height">Max tip height</label>
               <input
-                type="number" placeholder="72.9 m"readonly/>
+                type="number" placeholder="44.5 m"readonly/>
             </div>
           </form>
         </div>
