--- a/views/pages/itemGRT770E.ejs
+++ b/views/pages/itemGRT770E.ejs
@@ -13,29 +13,34 @@
       <p style="text-align: center">
         <a class="link" href="/homePage">דף הבית</a>&gt
         <a class="link"  onclick="BackToCatalog()">קטלוג מנופים</a>&gt
-        <a class="link" style="cursor: default;"> GRT8100-1  </a>
+        <a class="link" style="cursor: default;"> GRT770-E  </a>
       </p>
     </section>
 
     <section class="content">
-            <h2 style="direction: ltr;">GRT8100-1 דגם GROVE מנוף</h2>
+            <h2 style="direction: ltr;">RT770-E דגם GROVE מנוף</h2>
 
       <div class="container">
         <div class="gallery">
           <div class="mySlides ">
             <div class="img-container">
-              <img src="/assets/GRT8100.png" alt="GRT8100" />
+              <img src="/assets/RT770e-1.png" alt="RT770E black" />
             </div>
           </div>
 
           <div class="mySlides ">
             <div class="img-container">
-              <img src="/assets/GRT8100-profile.jpg" alt="GRT8100-profile" />
+              <img src="/assets/RT770e-2.jpg" alt="RT770E" />
             </div>
           </div>
           <div class="mySlides ">
             <div class="img-container">
-              <img src="/assets/GRT8100-outriggers.jpg" alt="GRT8100-outriggers" />
+              <img src="/assets/RT770e-3.jpg" alt="RT770E" />
+            </div>
+          </div>
+          <div class="mySlides ">
+            <div class="img-container">
+              <img src="/assets/RT770e-4.jpg" alt="GRT770E" />
             </div>
           </div>
           <a class="prev" onclick="plusSlides(-1)">❯</a>
@@ -48,21 +53,21 @@
           <form class="details" id="details-form">
             <div class="input-box">
               <label for="max-capacity">קיבולת מקסימלית</label>
-              <input placeholder="100 t"readonly/>
+              <input placeholder="65 t"readonly/>
             </div>
             <div class="input-box">
               <label for="weight" >משקל כולל
               </label>
-              <input type="number"placeholder="57,220 kg"readonly/>
+              <input type="number"placeholder="44,135 kg"readonly/>
             </div>
             <div class="input-box">
               <label for="boom-length" >אורך בום ראשי</label>
-              <input type="text"placeholder="12 m - 47 m" readonly />
+              <input type="text"placeholder="11 m - 42 m" readonly />
             </div>
             <div class="input-box">
               <label for="tip-height">גובה קצה מקסימלי</label>
               <input
-                type="number" placeholder="72.9 m"readonly/>
+                type="number" placeholder="67.4 m"readonly/>
             </div>
           </form>
         </div>
