--- a/views/partials/enFooter.ejs
+++ b/views/partials/enFooter.ejs
@@ -5,33 +5,39 @@
   <div class="footer-grid">
     <div class="footer-item">
       <div class="footer-item-title">
-        <a href="#">Contact Details</a>
+        <a >Contact Details</a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
           <p id="city">
             <i
               class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-             Rogozin 9, Ashdod, Israel
+            ></i
+            >&nbsp;&nbsp; Rogozin 3, Ashdod, Israel
           </p>
           <p id="phone">
             <i
               class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-             +972-50-9088120
+            ></i
+            >&nbsp;&nbsp;Yossi: +972-50-4000-811
           </p>
-          <p id="email">
+          <p id="phone">
+            <i
+              class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"
+            ></i
+            >&nbsp;&nbsp;Office: +972-77-404-7-406
+          </p>
+          <p>
             <i
               class="fa fa-envelope-o fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-            shaimanofin@gmail.com
+            ></i
+            >&nbsp;&nbsp; RTCRANES.1@gmail.com
           </p>
           <p id="time">
             <i
               class="fa fa-clock-o fa-fw w3-margin-right w3-large w3-text-teal"
-            ></i>&nbsp;&nbsp;
-            Sun-Thu, 8:00 AM - 7:00 PM
+            ></i
+            >&nbsp;&nbsp; Sun-Thu, 8:00 AM - 7:00 PM
           </p>
         </ul>
       </div>
@@ -39,31 +45,31 @@
 
     <div class="footer-item" id="services-footer">
       <div class="footer-item-title">
-        <a href="#">Services </a>
+        <a >Services </a>
       </div>
       <div class="footer-item-content" >
         <ul id="menu" class="menu">
-          <li><a href="#">Cranes Rental</a></li>
-          <li><a href="#"> Cranes For Sale</a></li>
-          <li><a href="#">Human Resources </a></li>
+          <li><a href="/homePageEn#catalog-section">Cranes Rental</a></li>
+          <li><a href="/soonEn"> Cranes For Sale</a></li>
+          <li><a href="/soonEn">Human Resources </a></li>
         </ul>
       </div>
     </div>
     <div class="footer-item" id="ltd-footer">
       <div class="footer-item-title">
-        <a href="#">S.R Cranes Ltd</a>
+        <a >S.R Cranes Ltd</a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
-          <li><a href="/contactUs"> About </a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#"> Clients </a></li>
+          <li><a href="/homePageEn#about-section"> About </a></li>
+          <li><a href="/soonEn">Projects</a></li>
+          <li><a href="/homePageEn#clients-section"> Clients </a></li>
         </ul>
       </div>
     </div>
     <div class="footer-item" id="footer-logo">
-      <a href="#" title="SRC | S.R Cranes Ltd.">
-        <img class="logo-main scale" src="/assets/sr-logo.png" alt="logo"
+      <a href="#" title="RTC | R.T Cranes Ltd.">
+        <img class="logo-main scale" src="/assets/rt-logo.png" alt="logo"
       /></a>
     </div>
   </div>
