--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -22,7 +22,7 @@
         <div class="content">
           <div class="center-icon">
             <img
-              src="/assets/20-years-millenium-auto-dealership.png"
+            src="/assets/40-years.png"
               alt="Icon"
               class="icon-image"
             />
@@ -40,7 +40,7 @@
         <div class="service-banner-item">
           <div
             class="service-banner-item-content"
-            onclick="window.location.href='/cranesRental'"
+            
           >
             <div class="service-banner-item-title"><h4>השכרת מנופים</h4></div>
 
@@ -50,13 +50,13 @@
               לבחירתכם.
             </p>
           </div>
-          <a class="button" href="/cranesRental"> למידע נוסף &gt; </a>
+          <a class="button" href="/homePage#contact-section"> למידע נוסף &gt; </a>
         </div>
 
         <div class="service-banner-item">
           <div
             class="service-banner-item-content"
-            onclick="window.location.href='/homePage#contact-section'"
+            
           >
             <div class="service-banner-item-title">
               <h4>כח אדם ומפעילים</h4>
@@ -77,7 +77,7 @@
         <div class="service-banner-item">
           <div
             class="service-banner-item-content"
-            onclick="window.location.href='/homePage#contact-section'"
+           
           >
             <div class="service-banner-item-title"><h4>מכירת מנופים</h4></div>
             <p>
@@ -184,7 +184,7 @@
           <h1>אודותינו</h1>
           <div class="bar"></div>
           <div class="about-text">
-            <p>
+            <!-- <p>
               מנופי אר.טי בע"מ היא חברה מובילה ומוכרת בשירותי השכרת מנופים ובתעשיית
               ההרמה הכבדה. <br />החברה בעלת מוניטין של למעלה מ-20 שנות ניסיון
               בתעשייה, והייתה חלק בלתי נפרד במספר רב של פרויקטים בקנה מידה
@@ -201,7 +201,21 @@
               תוך תכנון כל פרויקט בזהירות ובשיקול דעת שמגיעים מניסיון של שנים
               בהפעלת מנופים, על מנת להגיע לביצועים מיטביים ולשביעות רצון הלקוח.
               <br />
-            </p>
+            </p> -->
+            <p>מנופי אר. טי הינה חברה פרטית, בעלת ידע וניסיון של למעלה מ- 40 שנה.<br> אנו מתמחים במתן שירותי מנוף נייד, מפעילי צמ"ה, כח אדם כללי ומקצועי.<br><br> 
+
+              חברתינו עובדת עם משרדים ממשלתיים, תעשיות ביטחוניות, בשיתוף עם מגוון חברות מובילות בתעשיית הבנייה בארץ ובחו”ל, ולוקחת חלק עיקרי בבניית פרויקטים כגון בניית נמל הדרום באשדוד, נמל חיפה החדש, המכשול בעזה, תחנות וקווי הרכבת הקלה בתל אביב ובערים שכנות, הרכבות קונסטרוקציה, התקנת חיפויי חוץ וציוד מיוחד, בניית חניונים גשרים ומסועים, בנייני תעשייה ומגורים ופרויקטים נוספים ברחבי הארץ.<br><br>
+              
+              פעילותינו מתמקדת במנופים מסוג RT, מנופים בעלי עבירות גבוהה, ולחברה מנופים בעלי כושר הרמה החל מ - 25 טון ועד - 130 טון.<br><br>
+              
+              בנוסף חברתינו נותנת מענה מקצועי ובטיחותי להעסקת מנופאים בעלי רישיון עגורן צריח א', עגורן נייד ב' - שער, גשר, זחלי, RT , נייד והעמסה עצמית, אתתים מוסמכים, מלגזנים להפעלת מלגזה טלסקופית מסתובבת עם או בלי כננת, בהתאם ולפי דרישות משרד העבודה.<br><br> 
+              
+              על מנת לבצע את הנדרש בתחומי הפעילות, רוכשת החברה את מיטב ציוד ההנפה מידי היצרנים המובילים בעולם, וזאת בכדי להעניק שירות בטיב ובאיכות הגבוהים ביותר בשוק ועל פי סטנדרטים בין - לאומים.<br><br>
+              
+              החברה חרטה על דגלה לפעול בסטנדרטים המקצועיים והבטיחותיים ביותר, תוך הקפדה על איכות, יעילות, ואמינות, ובכך להעניק את רמת השירות הגבוהה ביותר.
+              <br>
+              <br>בברכת שיתוף פעולה פורה,<br>
+              יוסי, מנופי אר. טי בע"מ.</p>
           </div>
         </div>
       </div>
@@ -400,7 +414,7 @@
             id="contact-form"
             action="/send-email"
             method="post"
-            enctype="text/plain"
+            
           >
             <div class="form-group inline">
               <div class="form-group">
@@ -419,7 +433,7 @@
                   type="tel"
                   id="mobile"
                   name="mobile"
-                  placeholder="*טלפון"
+                  placeholder="טלפון*"
                 />
               </div>
             </div>
@@ -451,7 +465,7 @@
 
     <%- include('../partials/footer') %>
     <div class="bottom-menu">
-      <a href="tel:050-9088-120" class="bottom-menu-button" id="call-button">
+      <a href="tel:050-4000-811 " class="bottom-menu-button" id="call-button">
         <span class="bottom-menu-text-label-offset">
           <i class="fa fa-phone"></i>
         </span>
@@ -516,14 +530,14 @@
       });
       function sendMessageWhatsApp() {
         const encodedMessage = encodeURIComponent('היי , הגעתי דרך האתר שלכם , אשמח ליצור קשר');
-        const phoneNumber = '+972509088120';  // Replace with the desired phone number
+        const phoneNumber = '+972504000811';  
 
         const whatsappUrl = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodedMessage}`;
 
 window.open(whatsappUrl, '_blank');
 }
     function clearFormInputs() {
-      const form = document.getElementById("contact-form"); // Replace with your form ID
+      const form = document.getElementById("contact-form"); 
       const inputs = form.querySelectorAll("input");
 
       inputs.forEach((input) => {
