--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -20,7 +20,7 @@
         <div class="content">
           <div class="center-icon">
             <img
-              src="/assets/20-years-millenium-auto-dealership.png"
+            src="/assets/40-years.png"
               alt="Icon"
               class="icon-image"
             />
@@ -448,12 +448,13 @@
             <div class="form-group inline">
               <div class="form-group">
                 <label for="fullName">Full Name :</label>
-                <input
+                <input 
                   type="text"
                   id="fullName"
                   name="fullName"
                   placeholder="*Full Name"
                   required
+                  style="text-align: left;"
                 />
               </div>
               <div class="form-group">
@@ -463,6 +464,8 @@
                   id="mobile"
                   name="mobile"
                   placeholder="*Phone"
+                  style="text-align: left;"
+                  required
                 />
               </div>
             </div>
