--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -4,50 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/projects.css">
+  <%- include('../partials/head') %>
   <title>Selected Projects</title>
 </head>
 <body>
     <%- include('../partials/header') %>
     <section class="project-section">
     <h1>פרויקטים נבחרים</h1>
+      <!-- <div class="bar"></div> -->
   <main>
     
-    <div class="project-container">
-      <img src="assets/crane-background-img1.jpg" alt="Project 1">
-      <div class="project-info">
-        <h2>חניון שפיים</h2>
-        <p>בניית 7000 מקומות חניה לבאים לגוש דן</p>
+    <a href="https://online.flippingbook.com/view/264762456/" class="fbo-embed" data-fbo-id="e5a1223ba0" data-fbo-ratio="5:3" data-fbo-lightbox="yes" data-fbo-width="100%" data-fbo-height="auto" data-fbo-version="1" style="max-width: 100%">RT Cranes ltd</a><script async defer src="https://online.flippingbook.com/EmbedScriptUrl.aspx?m=redir&hid=264762456"></script>    <!-- <div class="container">
+      <h2 class="container-title">חניון שפיים - בניית 7000 מקומות חניה לבאים לגוש דן</h2>
+      <div class="image-container">
+        <img src="assets/project1-1.jpg" alt="Image 1">
+      <img src="assets/project1-2.jpg" alt="Image 2">
       </div>
     </div>
-    <div class="project-container">
-        <img src="assets/crane-background-img1.jpg" alt="Project 1">
-        <div class="project-info">
-          <h2>Project 1 Title</h2>
-          <p>Description of Project 1.</p>
-        </div>
+    <div class="container">
+      <h2 class="container-title">בניית שוברי הגלים והרציפים בנמל הדרום<br> בשיתוף עם חברת PMEC צוללנים GPS ומערכת סונאר</h2>
+      <div class="image-container">
+        <img src="assets/project2-1.jpg" alt="Image 1">
+      <img src="assets/project2-2.jpg" alt="Image 2">
       </div>
-      <div class="project-container">
-        <img src="assets/crane-background-img1.jpg" alt="Project 1">
-        <div class="project-info">
-          <h2>Project 1 Title</h2>
-          <p>Description of Project 1.</p>
-        </div>
-      </div>
-      <div class="project-container">
-        <img src="assets/crane-background-img1.jpg" alt="Project 1">
-        <div class="project-info">
-          <h2>Project 1 Title</h2>
-          <p>Description of Project 1.</p>
-        </div>
-      </div>
-      <div class="project-container">
-        <img src="assets/crane-background-img1.jpg" alt="Project 1">
-        <div class="project-info">
-          <h2>Project 1 Title</h2>
-          <p>Description of Project 1.</p>
-        </div>
-      </div>
+    </div> -->
+
   </main>
 </section>
+<%- include('../partials/footer') %>
+<script src="https://cdn.enable.co.il/licenses/enable-L22260wfos04j6vz-0923-50759/init.js"></script>
+
 </body>
 </html>
