--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -39,7 +39,7 @@
       <div class="footer-item-content" id="services-footer">
         <!-- <div class="menu-container"> -->
         <ul id="menu" class="menu">
-          <li><a href="/cranesRental">השכרת מנופים </a></li>
+          <li><a href="/soon">השכרת מנופים </a></li>
           <li><a href="/soon">מכירת מנופים</a></li>
           <li><a href="/soon">כח אדם</a></li>
         </ul>
@@ -52,7 +52,7 @@
       <div class="footer-item-content">
         <ul id="menu" class="menu">
           <li><a href="/homePage#about-section"> אודות </a></li>
-          <li><a href="/soon">פרויקטים נבחרים </a></li>
+          <li><a href="/projects">פרויקטים נבחרים </a></li>
           <li><a href="/homePage#clients-section"> לקוחותינו </a></li>
 
         </ul>
