--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,7 +46,7 @@
           <a
             
             class="menu-link"
-            href="/soon"
+            href="/projects"
             >פרויקטים</a
           >
         </li>
@@ -132,6 +132,7 @@
             >אודות</a
           >
         </li>
+        
         <li>
           <a
             name="contact-section"
