--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -71,7 +71,7 @@ body {
 .icon-image {
   display: inline-block;
   max-width: 100%;
-  max-height: 100px;
+  max-height: 180px;
   height: auto;
 }
 
@@ -320,7 +320,7 @@ h5 {
   font-family: 'Helvetica W01 Light';
   letter-spacing: normal;
   margin-bottom: 15px;
-   
+  
  font-size: 18px;
 
 }
@@ -813,9 +813,6 @@ button:hover {
   -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.075);
   text-align: start;
   padding: 5px 30px 10px 30px;
-  /* Add some vertical padding to the container */
-
-
 }
 
 .contact .container {
@@ -835,7 +832,7 @@ button:hover {
   font-size: 20px;
   /* Adjust font size as needed */
   color: rgb(64, 64, 85);
-  font-family: "calibri";
+  font-family: "Helvetica W01 Light";
 
 }
 
@@ -906,6 +903,7 @@ i {
   font-size: 16px;
   width: 100%;
   margin-left: 0;
+  text-align: right;
 }
 
 .contact .form-group input,
@@ -1032,7 +1030,7 @@ i {
 
   .service-item {
 
-    width: 320px;
+    width: 325px;
     height: 650px;
 
   }
@@ -1045,7 +1043,7 @@ i {
   .service-item-content {
 
     box-shadow: 0 0 5px rgba(224, 216, 216, 0.342);
-    width: 260px;
+    width: 280px;
     height: 350px;
 
   }
@@ -1649,6 +1647,9 @@ i {
   }
 }
 @media (max-width: 490px) {
+  #catalog-section{
+    display: none;
+  }
   .bottom-menu{
     position: fixed;
     bottom: 0;
@@ -1743,9 +1744,9 @@ opacity: 1 !important;
 }
 
 .info-container .info-form {
-  width: 310px;
-
-
-
+  width: 350px;
+}
+#services-section{
+  display: none;
 }
 }
