--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,13 +1,6 @@
 <head>
-  <title>S.r Cranes</title>
+  <title>R.T Cranes Ltd</title>
   <link rel="icon" href="/assets/sr-web-icon.png" type="image/png" />
-  
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
- 
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
