--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/projects.css">
+  <link rel="stylesheet" href="/css/homePage.css">
   <%- include('../partials/head') %>
   <title>Selected Projects</title>
 </head>
