projects section fix

--- a/views/pages/homePage.ejs
+++ b/views/pages/homePage.ejs
@@ -47,7 +47,7 @@
 
             <p>
               בחברתנו ניתן להשכיר מנופים איכותיים ומקצועיים, בהתאמה מלאה לפרויקט
-              שלכם, לדרישות ולמבנה ולשטח , עם אפשרות להעמדת מפעיל לימי עבודה
+              שלכם, לדרישות למבנה ולשטח , עם אפשרות להעמדת מפעיל לימי עבודה
               לבחירתכם.
             </p>
           </div>
@@ -291,6 +291,17 @@
             <img src="/assets/Danyacebus.png" class="icon" alt="דניה סיבוב" />
           </div>
         </div>
+
+        <div class="clients-item">
+          <div class="clients-item-content">
+            <img src="/assets/HCTLogoInitials.png" class="icon" alt="נמל הדרום HCT" title="נמל הדרום HCT"/>
+          </div>
+        </div>
+        <div class="clients-item">
+          <div class="clients-item-content">
+            <img src="/assets/merterre-logo.png" class="icon" alt="מרטר" />
+          </div>
+        </div>
       </div>
     </section>
 
@@ -387,7 +398,7 @@
               </p>
               <p>
                 <i class="fa fa-envelope fa-fw"></i>&nbsp;&nbsp;
-                RTCRANES.1@gmail.com
+                Rt.cranes1@gmail.com
               </p>
               <p id="time">
                 <i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp; א'-ה', 8:00 -
