--- a/views/pages/homePageEn.ejs
+++ b/views/pages/homePageEn.ejs
@@ -426,7 +426,7 @@
                 <i
                   class="fa fa-envelope-o fa-fw w3-margin-right w3-large w3-text-teal"
                 ></i
-                >&nbsp;&nbsp; RTCRANES.1@gmail.com
+                >&nbsp;&nbsp;  Rt.cranes1@gmail.com
               </p>
               <p id="time">
                 <i
