--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -53,7 +53,7 @@
         <ul id="menu" class="menu">
           <li><a href="/homePage#about-section"> אודות </a></li>
           <li><a href="/projects">פרויקטים נבחרים </a></li>
-          <li><a href="/homePage#clients-section"> לקוחותינו </a></li>
+          <li><a href="/homePage#clients-section">מבין לקוחותינו </a></li>
 
         </ul>
       </div>
